# CPU-Simulator

./: .gitignore  CMakeLists.txt  CPU.vcxproj.filters  Makefile  README.md  README_TYPESCRIPT  build.sh  main.cpp
CPU/: CMakeLists.txt  CPU.sln  CPU.vcxproj  CPU.vcxproj.filters  alu.cpp  alu.h  assembly.txt  cpu.cpp  cpu.h  flags.cpp  flags.h  main  main.cpp
CPU/libs/systemc-2.3.3/: CMakeLists.txt
CPU/libs/systemc-2.3.3/objdir/docs/: Makefile
CPU/libs/systemc-2.3.3/objdir/examples/: Makefile
CPU/libs/systemc-2.3.3/objdir/examples/tlm/common/: Makefile
CPU/libs/systemc-2.3.3/objdir/src/sysc/communication/.deps/: sc_clock.Plo  sc_event_finder.Plo  sc_event_queue.Plo  sc_export.Plo  sc_interface.Plo  sc_signal.Plo
CPU/libs/systemc-2.3.3/objdir/src/sysc/datatypes/bit/.deps/: sc_bit.Plo
CPU/libs/systemc-2.3.3/objdir/src/sysc/datatypes/fx/.deps/: sc_fxdefs.Plo  sc_fxnum.Plo  sc_fxval.Plo  sc_fxval_observer.Plo  scfx_mant.Plo  scfx_pow10.Plo  scfx_rep.Plo  scfx_utils.Plo
CPU/libs/systemc-2.3.3/objdir/src/sysc/datatypes/int/.deps/: sc_int_mask.Plo  sc_signed.Plo  sc_uint_base.Plo
CPU/libs/systemc-2.3.3/objdir/src/sysc/kernel/.deps/: sc_attribute.Plo  sc_cthread_process.Plo  sc_except.Plo  sc_method_process.Plo  sc_process.Plo  sc_reset.Plo  sc_spawn_options.Plo  sc_time.Plo
CPU/libs/systemc-2.3.3/objdir/src/sysc/tracing/.deps/: sc_wif_trace.Plo
CPU/libs/systemc-2.3.3/objdir/src/sysc/utils/.deps/: sc_stop_here.Plo  sc_string.Plo  sc_utils_ids.Plo
CPU/libs/systemc-2.3.3/objdir/src/tlm_core/: Makefile
CPU/libs/systemc-2.3.3/objdir/src/tlm_core/tlm_2/tlm_generic_payload/.deps/: tlm_phase.Plo
CPU/libs/systemc-2.3.3/objdir/src/tlm_utils/: Makefile
CPU/libs/systemc_installed/include/sysc/communication/: sc_port.h
CPU/modules/: flags.cpp  flags.h
CPU/modules/alu/: alu.cpp  alu.h
CPU/modules/cpu/: cpu.cpp  cpu.h
CPU/unit-tests/: module_testing_example.cpp
CPU/x64/Debug/: CPU.exe.recipe  CPU.ilk  CPU.vcxproj.FileListAbsolute.txt  vc143.idb
CPU/x64/Debug/CPU.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CPU.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libs/systemc-2.3.3/: CMakeLists.txt
libs/systemc-2.3.3/objdir/: Makefile  config.status  libtool
libs/systemc-2.3.3/objdir/examples/sysc/: Makefile
libs/systemc-2.3.3/objdir/examples/tlm/: Makefile
libs/systemc-2.3.3/objdir/src/: Makefile  libsystemc.la  tlm.pc
libs/systemc-2.3.3/objdir/src/sysc/: Makefile
libs/systemc-2.3.3/objdir/src/sysc/communication/.deps/: sc_mutex.Plo  sc_port.Plo  sc_prim_channel.Plo  sc_semaphore.Plo  sc_signal_ports.Plo  sc_signal_resolved.Plo  sc_signal_resolved_ports.Plo
libs/systemc-2.3.3/objdir/src/sysc/datatypes/bit/.deps/: sc_bv_base.Plo  sc_logic.Plo  sc_lv_base.Plo
libs/systemc-2.3.3/objdir/src/sysc/datatypes/fx/.deps/: sc_fxcast_switch.Plo  sc_fxnum_observer.Plo  sc_fxtype_params.Plo
libs/systemc-2.3.3/objdir/src/sysc/datatypes/int/.deps/: sc_int_base.Plo  sc_length_param.Plo  sc_nbexterns.Plo  sc_nbutils.Plo  sc_unsigned.Plo
libs/systemc-2.3.3/objdir/src/sysc/datatypes/misc/.deps/: sc_concatref.Plo  sc_value_base.Plo
libs/systemc-2.3.3/objdir/src/sysc/kernel/.deps/: sc_cor_qt.Plo  sc_event.Plo  sc_join.Plo  sc_main.Plo  sc_main_main.Plo  sc_module.Plo  sc_module_name.Plo  sc_module_registry.Plo  sc_name_gen.Plo  sc_object.Plo  sc_object_manager.Plo  sc_phase_callback_registry.Plo  sc_sensitive.Plo  sc_simcontext.Plo  sc_thread_process.Plo  sc_ver.Plo  sc_wait.Plo  sc_wait_cthread.Plo
libs/systemc-2.3.3/objdir/src/sysc/tracing/.deps/: sc_trace.Plo  sc_trace_file_base.Plo  sc_vcd_trace.Plo
libs/systemc-2.3.3/objdir/src/sysc/utils/.deps/: sc_hash.Plo  sc_list.Plo  sc_mempool.Plo  sc_pq.Plo  sc_report.Plo  sc_report_handler.Plo  sc_vector.Plo
libs/systemc-2.3.3/objdir/src/tlm_core/tlm_2/tlm_generic_payload/.deps/: tlm_gp.Plo
libs/systemc-2.3.3/objdir/src/tlm_core/tlm_2/tlm_quantum/.deps/: tlm_global_quantum.Plo
libs/systemc-2.3.3/objdir/src/tlm_utils/.deps/: convenience_socket_bases.Plo  instance_specific_extensions.Plo
libs/systemc_installed/examples/sysc/risc_cpu/: CMakeLists.txt
libs/systemc_installed/lib-linux64/: libsystemc.la
libs/systemc_installed/lib-linux64/pkgconfig/: systemc.pc
modules/: CMakeLists.txt  directive.h
modules/bios/: bios.cpp  bios.h
modules/dcache/: dcache.cpp  dcache.h
modules/decode/: decode.cpp  decode.h
modules/exec/: exec.cpp  exec.h
modules/fetch/: fetch.cpp  fetch.h
modules/floating/: floating.cpp  floating.h
modules/icache/: icache.cpp  icache.h
modules/mmxu/: mmxu.cpp  mmxu.h
modules/paging/: paging.cpp  paging.h
modules/pic/: pic.cpp  pic.h
modules/rng/: rng.cpp  rng.h
modules/stimulus/: stimulus.cpp  stimulus.h
shared/: CMakeLists.txt  directive.h  module_testing.h
src/: assembler.pl  cpu-simulator  icache.img  input_poly.txt  printout.img  register.img  rng_test.asm  script.pl
unit-tests/: CMakeLists.txt
unit-tests/hardware_tests/: CMakeLists.txt  bios.test.cpp  dcache.test.cpp  decode.test.cpp  exec.test.cpp  fetch.test.cpp  floating.test.cpp  icache.test.cpp  mmxu.test.cpp  module_testing_example.cpp  module_testing_example.test.cpp  paging.test.cpp  pic.test.cpp  rng.test.cpp  stimulus.test.cpp
unit-tests/software_tests/: test_solve_poly.asm
x64/Debug/: CPU.exe.recipe  CPU.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/CPU.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.read.1.tlog  link.write.1.tlog
